--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
   # ===== Stage 1: 並列ビルド =====
   build:
     name: Build ${{ matrix.architecture }}
-    runs-on: windows-latest
+    runs-on: windows-2025
     strategy:
       matrix:
         architecture: [win-x64, win-arm64]
@@ -306,7 +306,7 @@ jobs:
   winget:
     name: Submit to Winget
     needs: release  # リリース完了を待つ
-    runs-on: windows-latest
+    runs-on: windows-2025
     if: startsWith(github.ref, 'refs/tags/')  # タグプッシュ時のみ実行
     
     steps:
