--- a/.github/workflows/staging-test.yml
+++ b/.github/workflows/staging-test.yml
@@ -432,8 +432,17 @@ jobs:
           Write-Host "Starting MCP server for Inspector testing..."
           Write-Host "Command: $useCommand"
           
-          # Start the MCP server in background
-          $serverProcess = Start-Process -FilePath $useCommand -NoNewWindow -PassThru -RedirectStandardInput -RedirectStandardOutput -RedirectStandardError
+          # Create temporary files for capturing server output
+          $tempStdout = New-TemporaryFile
+          $tempStderr = New-TemporaryFile
+          Write-Host "Server logs will be captured to:"
+          Write-Host "  stdout: $($tempStdout.FullName)"
+          Write-Host "  stderr: $($tempStderr.FullName)"
+          
+          # Start the MCP server in background with output redirection
+          $serverProcess = Start-Process -FilePath $useCommand -NoNewWindow -PassThru `
+            -RedirectStandardOutput $tempStdout.FullName `
+            -RedirectStandardError $tempStderr.FullName
           Start-Sleep -Seconds 3
           
           # Test 1: List available tools
@@ -541,11 +550,42 @@ jobs:
         } catch {
           Write-Warning "❌ MCP Inspector testing failed: $_"
           Write-Host "This may indicate issues with the MCP server or Inspector setup"
+          
+          # Display server logs for debugging
+          Write-Host ""
+          Write-Host "=== MCP Server Logs (stdout) ==="
+          if (Test-Path $tempStdout.FullName) {
+            $stdout = Get-Content $tempStdout.FullName -Raw
+            if ($stdout) {
+              Write-Host $stdout
+            } else {
+              Write-Host "(no stdout output)"
+            }
+          }
+          
+          Write-Host ""
+          Write-Host "=== MCP Server Logs (stderr) ==="
+          if (Test-Path $tempStderr.FullName) {
+            $stderr = Get-Content $tempStderr.FullName -Raw
+            if ($stderr) {
+              Write-Host $stderr
+            } else {
+              Write-Host "(no stderr output)"
+            }
+          }
         } finally {
           # Clean up
           if ($serverProcess -and !$serverProcess.HasExited) {
             Write-Host "Stopping MCP server process..."
             $serverProcess.Kill()
+          }
+          
+          # Clean up temporary files
+          if ($tempStdout -and (Test-Path $tempStdout.FullName)) {
+            Remove-Item $tempStdout.FullName -Force -ErrorAction SilentlyContinue
+          }
+          if ($tempStderr -and (Test-Path $tempStderr.FullName)) {
+            Remove-Item $tempStderr.FullName -Force -ErrorAction SilentlyContinue
           }
           
           # Close Calculator if opened
